<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.hemorrhage.HemorrhageFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/hemorrhageTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/standartSpecialMargin"
            android:text="@string/LargeTextTitlePlaceholder"
            android:textAlignment="center"
            android:textSize="@dimen/defaultTitleSize" />

        <ImageView
            android:id="@+id/hemorrhageImage"
            android:layout_width="match_parent"
            android:layout_height="@dimen/standartImageHeight"
            android:layout_below="@id/hemorrhageContent"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/standartSpecialMargin"
            android:contentDescription="@string/defaultImageDescription"
            android:src="@drawable/hemorrhage" />

        <TextView
            android:id="@+id/hemorrhageContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/hemorrhageTitle"
            android:layout_margin="@dimen/standartNormalMargin"
            android:text="@string/LargeTextPlaceholder"
            android:textSize="@dimen/defaultContentSize" />
    </RelativeLayout>


</ScrollView>