<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.intoxication.IntoxicationFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/intoxicationTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/standartSpecialMargin"
            android:text="@string/LargeTextTitlePlaceholder"
            android:textAlignment="center"
            android:textSize="@dimen/defaultTitleSize" />

        <ImageView
            android:id="@+id/freezingImage"
            android:layout_width="match_parent"
            android:layout_height="@dimen/standartImageHeight"
            android:layout_below="@id/intoxicationContent"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/standartSpecialMargin"
            android:contentDescription="@string/defaultImageDescription"
            android:src="@drawable/intoxication" />

        <TextView
            android:id="@+id/intoxicationContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/intoxicationTitle"
            android:layout_margin="@dimen/standartNormalMargin"
            android:text="@string/LargeTextPlaceholder"
            android:textSize="@dimen/defaultContentSize" />
    </RelativeLayout>




</ScrollView>